# CSV-AskBid-Pair-Parser

./: CMakeLists.txt  README.md  main.cpp  template.cpp
csv/: EURUSD_Candlestick_1_M_ASK_01.04.2025-30.04.2025.csv  EURUSD_Candlestick_1_M_BID_01.04.2025-30.04.2025.csv  GBPUSD_Candlestick_1_M_ASK_01.04.2025-30.04.2025.csv  GBPUSD_Candlestick_1_M_BID_01.04.2025-30.04.2025.csv
headers/csv/: csv_map.h  csv_pair.h  csv_reader.h  csv_structure.h
headers/utils/: loop.h  status.h
